# system-menu-applet

./: .gitignore  INSTALL  LICENSE  Makefile.am  README  configure.ac
src/: Makefile.am  main.c  menu.c  menu.h  popup_menu.c  popup_menu.h  tray_icon.c  tray_icon.h
